updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am father of 2 and future software developer looking to expand my knowledge base and turn my passion into a career.</p>
+      <h1>Where Im from</h1>
+      <p>Orlando, FL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing basically any sport and spending time with my family.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software developer for Lockheed Martin.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To create a better life for my children</p>
     </section>
 
     <footer id="footer">
