updating spelling errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am father of 2 and future software developer looking to expand my knowledge base and turn my passion into a career.</p>
+      <p>I am a father of 2 and future software developer looking to expand my knowledge base and turn my passion into a career.</p>
       <h1>Where Im from</h1>
       <p>Orlando, FL</p>
       <h1>What are your favorite hobbies?</h1>
